--- a/src/index.less
+++ b/src/index.less
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root {
-    @apply w-full h-full;
+html,
+body,
+#root {
+  @apply w-full h-full;
 }
